# numethods

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
src/numethods/: __init__.py
src/numethods/roots/: __init__.py  bracketing_methods.py  solution.py
